# MY-DOGE-MACRO

./: .env.example  .gitignore  LICENSE  README.md  cli.py  pyproject.toml  requirements.txt  setup.py
examples/: basic_usage.py
my_doge_macro/: __init__.py  cli.py  config.py  data_loader.py  strategist.py  utils.py
notebooks/: README.md
